@@ -11,7 +11,6 @@ dependencyManagement {
     }
 }
 
-
 version 'unspecified'
 
 task copyJar(type: Copy) {
@@ -20,36 +19,6 @@ task copyJar(type: Copy) {
 }
 
 build.dependsOn copyJar
-
-repositories {
-    mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
-}
-
-//def moduleName = "emmy.application"
-//compileJava {
-//    inputs.property("moduleName", moduleName)
-//    doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//        ]
-//        classpath = files()
-//    }
-//}
-//
-//compileTestJava {
-//    inputs.property("moduleName", moduleName)
-//    doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//                '--add-modules', 'org.junit.jupiter.api',
-//                '--add-reads', "$moduleName=org.junit.jupiter.api",
-//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-//        ]
-//        classpath = files()
-//    }
-//}
 
 sourceCompatibility = 11.0
 targetCompatibility = 11.0
@@ -89,7 +58,7 @@ dependencies {
     implementation group: 'org.webjars', name: 'bootstrap', version: "${bootstrapVersion}"
     implementation group: 'org.webjars', name: 'jquery', version: "${jqueryVersion}"
 
-    testImplementation project(":emmy-persistance")
+//    testImplementation project(":emmy-persistance")
 
     // Tests dependencies
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -99,25 +68,21 @@ dependencies {
         exclude group: 'org.hamcrest', module: 'hamcrest-library'
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
-
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    testImplementation(group: 'org.junit.vintage', name: 'junit-vintage-engine', version: "${junitVersion}") {
-        exclude group: 'junit', module: 'junit'
-    }
+//
+//    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+//    testImplementation(group: 'org.junit.vintage', name: 'junit-vintage-engine', version: "${junitVersion}") {
+//        exclude group: 'junit', module: 'junit'
+//    }
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junitVersion}"
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junitVersion}"
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
-    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoVersion}"
-    testImplementation('org.springframework.security:spring-security-test')
-    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+//    testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
+//    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoVersion}"
+//    testImplementation('org.springframework.security:spring-security-test')
+//    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
 
-    testImplementation("org.junit.platform:junit-platform-runner:1.5.2") {
-        exclude group: 'junit', module: 'junit'
-    }
-}
-
-test {
-    useJUnitPlatform()
+//    testImplementation("org.junit.platform:junit-platform-runner:1.5.2") {
+//        exclude group: 'junit', module: 'junit'
+//    }
 }
 
 ext.moduleName = 'org.tpokora.application'
