@@ -13,35 +13,6 @@ dependencyManagement {
 
 version 'unspecified'
 
-repositories {
-    mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
-}
-
-//def moduleName = "emmy.config"
-//compileJava {
-//    inputs.property("moduleName", moduleName)
-//    doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//        ]
-//        classpath = files()
-//    }
-//}
-//
-//compileTestJava {
-//    inputs.property("moduleName", moduleName)
-//    doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//                '--add-modules', 'org.junit.jupiter.api',
-//                '--add-reads', "$moduleName=org.junit.jupiter.api",
-//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-//        ]
-//        classpath = files()
-//    }
-//}
 
 dependencies {
     implementation project(":emmy-domain")
@@ -53,12 +24,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.4.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.3.4.RELEASE'
 
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.5.2"
-    testImplementation "org.junit.platform:junit-platform-runner:1.5.2"
-}
-
-test {
-    useJUnitPlatform()
 }
 
 ext.moduleName = 'org.tpokora.config'
