@@ -6,44 +6,9 @@ plugins {
 
 version 'unspecified'
 
-repositories {
-    mavenCentral()
-}
-
-//def moduleName = "emmy.domain"
-//compileJava {
-//    inputs.property("moduleName", moduleName)
-//    doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//        ]
-//        classpath = files()
-//    }
-//}
-//
-//compileTestJava {
-//    inputs.property("moduleName", moduleName)
-//    doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//                '--add-modules', 'org.junit.jupiter.api',
-//                '--add-reads', "$moduleName=org.junit.jupiter.api",
-//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-//        ]
-//        classpath = files()
-//    }
-//}
-
-
 dependencies {
     implementation project(":emmy-common")
-
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.5.2"
-    testImplementation "org.junit.platform:junit-platform-runner:1.5.2"
 }
 
-test {
-    useJUnitPlatform()
-}
 
 ext.moduleName = 'org.tpokora.domain'
